<resources>
    <string name="app_name">Track Keeper</string>
    <string name="track_keeper">Track Keeper</string>
    <string name="title_hint">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here</string>
    <string name="add_record">Add Record</string>
    <string name="add_url">Add URL</string>
    <string name="delete_note">Delete Note</string>
    <string name="add_image">Add Image</string>
    <string name="pick_color"><u>Pick Color</u></string>
    <string name="more_actions">More Actions</string>
    <string name="my_notes">My Notes</string>
    <string name="search_your_notes">Search your notes...</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
</resources>