<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.NewNote">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_40"
        android:padding="@dimen/margin_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_20">

                <ImageView
                    android:id="@+id/save_button"
                    android:layout_width="@dimen/margin_25"
                    android:layout_height="@dimen/margin_25"
                    android:background="@drawable/save_background_button"
                    android:padding="@dimen/margin_4"
                    android:src="@drawable/ic_baseline_done_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/TintColor" />

                <ImageView
                    android:id="@+id/more_actions"
                    android:layout_width="@dimen/margin_25"
                    android:layout_height="@dimen/margin_25"
                    android:src="@drawable/more_actions_24"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:background="@drawable/bsb_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/save_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/BSBActionButton" />

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="@dimen/margin_25"
                    android:layout_height="@dimen/margin_25"
                    android:src="@drawable/back_arrow_24"
                    android:text="save"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/TintColor" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/note_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/background"
                android:visibility="gone" />

            <EditText
                android:id="@+id/note_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_12"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/title_hint"
                android:inputType="text"
                android:textColor="?attr/TextColor"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/time_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_4"
                android:textColor="?attr/TextColor"
                android:textSize="@dimen/text_14"
                tools:text="Sunday 2 Aug 2020 10:00 AM" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_12"
                android:orientation="horizontal">

                <View
                    android:id="@+id/subtitle_color"
                    android:layout_width="@dimen/margin_7"
                    android:layout_height="@dimen/margin_40"
                    android:background="@color/floating_action_button_yellow_color" />


                <EditText
                    android:id="@+id/note_subtitle_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginEnd="@dimen/margin_12"
                    android:background="@null"
                    android:hint="@string/note_subtitle"
                    android:inputType="textMultiLine"
                    android:textColor="?attr/TextColor"
                    android:textSize="@dimen/text_14" />
            </LinearLayout>

            <TextView
                android:id="@+id/note_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_12"
                android:textSize="@dimen/text_14"
                android:visibility="gone"
                android:textColorLink="@color/yellow_color"
                android:autoLink="web"
                tools:text="http://helloworld.com" />

            <EditText
                android:id="@+id/note_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_12"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/margin_100"
                android:textColor="?attr/TextColor"
                android:textSize="@dimen/text_14" />

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/more_action_layout"
        layout="@layout/more_actions_layout" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>